apps/mediacenter/radarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config.xml
          subPath: config.xml
          name: config
        - mountPath: /downloads
          name: downloads
        - mountPath: /movies
          name: movies
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp /config.xml /config/config.xml"]
      volumes:
      - name: config
        secret:
          secretName: radarr-config
      - name: 
        persistentVolumeClaim:
          claimName: downloads
      - name: movies
        persistentVolumeClaim:
          claimName: movies
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  ingressClassName: nginx
  rules:
  - host: radarr.home
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: radarr
            port:
              number: 7878
